2003-12-19  Jakub Jelinek  <jakub@redhat.com>

	* config/ia64/unwind-ia64.c (ia64_copy_rbs): New function.
	(unw_access_gr): Only call ia64_rse_rnat_addr if addr is above
	regstk_top.
	(uw_frame_state_for): Handle locations inside bundles.
	(uw_init_context_1): Initialize context->rnat.
	Set context->regstk_top to lowest rbs address which has nat collection
	in context->rnat.
	(uw_install_context): Fix rnat restoring.
	Restore ar.rsc to previous state.
	* config/ia64/linux.h (MD_FALLBACK_FRAME_STATE_FOR,
	MD_HANDLE_UNWABI): Handle unwinding through SA_ONSTACK frames.

2003-12-12  Jakub Jelinek  <jakub@redhat.com>

	* config/ia64/linux.h (IA64_GATE_AREA_END): Increase by 64K.
	(MD_FALLBACK_FRAME_STATE_FOR): Set fpsr_loc, br_loc[6] and
	br_loc[7].  Update comment.
	(MD_HANDLE_UNWABI): Define.
	* config/ia64/unwind-ia64.c (struct unw_state_record): Add
	unwabi field.
	(struct _Unwind_Context): Increase br_loc array size to 8 entries.
	(desc_abi): Set unwabi.
	(uw_update_reg_address): Allow br up to 7.
	(uw_update_context): Invoke MD_HANDLE_UNWABI if defined.
	(uw_install_context): Load b1..b5 from correct locations.
	Fix insn loading ar.fpsr.
	* doc/tm.texi: Document MD_HANDLE_UNWABI.

2003-11-30  Jan Hubicka  <jh@suse.cz>

	* explow.c (round_push): Fix handling of large sizes.

2003-12-15  Jakub Jelinek  <jakub@redhat.com>

	PR c++/13239
	* builtins.c (expand_builtin_expect_jump): Update
	TREE_VALUE (arglist) if unsave_expr_now langhook
	created a new tree.

2003-11-30  Jan Hubicka  <jh@suse.cz>

	* i386.c (ix86_emit_restore_regs_using_mov):  Deal with large offsets.

2003-12-03  Jan Hubicka  <jh@suse.cz>

	* i386.c (classify_argument): Make it 64bit clean.

2003-06-07  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/linux64.h (CRT_CALL_STATIC_FUNCTION): Define.

2003-04-25  Richard Henderson  <rth@redhat.com>

	* config/ia64/ia64.c (ia64_compute_frame_size): Allow inline asm
	to clobber ar.pfs and ar.unat.