@@ -1,3 +1,7 @@
+2003-12-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20031202-1.c: New test.
+
 2003-12-19  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/cleanup-10.c: New test.
