@@ -1,3 +1,8 @@
+2003-12-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* expr.c (store_constructor): Only set RTX_UNCHANGING_P for
+	read-only field if cleared is 0.
+
 2003-12-19  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/ia64/unwind-ia64.c (ia64_copy_rbs): New function.
